[package]
name = "tokio-stomp"
version = "0.2.0"
description = "Asynchronous streaming STOMP client"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
repository = "http://github.com/adwhit/tokio-stomp"
homepage = "http://github.com/adwhit/tokio-stomp"
keywords = ["stomp", "tokio", "streaming"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
bytes = "1.1.0"
custom_debug_derive = "0.4.0"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
nom = "4"

[dev-dependencies]
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
