[package]
name = "tokio-stomp"
version = "0.3.1"
description = "Asynchronous streaming STOMP client"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
repository = "http://github.com/adwhit/tokio-stomp"
homepage = "http://github.com/adwhit/tokio-stomp"
keywords = ["stomp", "tokio", "streaming"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
bytes = "1.5.0"
custom_debug_derive = "0.5.1"
anyhow = "1.0.75"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
nom = "7"

[dev-dependencies]
pretty_assertions = { version = "1.4.0", features = ["unstable"] }
tokio = { version = "1.34.0", features = ["time", "macros", "rt-multi-thread"] }
